--- a/style.css
+++ b/style.css
@@ -11,17 +11,18 @@ h1 {
   text-align: center;
 }
 
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+#image {
+  align-items: center;
 }
 
 p {
   text-indent: 5%;
+  text-align: justify;
 }
 
 footer {
   padding-top: 20px;
+}
+.footer-text {
   text-align: center;
 }
