--- a/style.css
+++ b/style.css
@@ -9,10 +9,16 @@ h1 {
   background-color: black;
   color: white;
   text-align: center;
+  margin-top: 0;
+  padding: 0;
 }
 
-#image {
+img {
+  max-width: 100%;
+  height: auto;
   align-items: center;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 p {
