--- a/style.css
+++ b/style.css
@@ -14,11 +14,10 @@ h1 {
 }
 
 img {
-  max-width: 100%;
-  height: auto;
-  align-items: center;
   margin-bottom: 0;
-  padding: 0;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 p {
